static/styles/zulip.css
/* ... */
.message_edit {
    display: none;
    margin-top: 5px;
}

/* Reduce some of the heavy padding from Bootstrap. */
#message_edit_form .edit-control-label {
    width: auto;
    float: left;
    font-size: 80%;
}
#message_edit_form .edit-controls {
    margin-left: 28px; /* Match .message_content padding less 7px textarea padding and border */
    margin-right: -7px;
}
#message_edit_form textarea {
    width: 100%;
    min-width: 206px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
#message_edit_form .control-group {
    margin-bottom: 5px;
}

.message_edit_notice {
    font-size: 11px;
}

.message_body_gravatar {
    width: 20px;
    height: 20px;
    margin: 2px 2px 2px 0px;
    border: 1px solid #000;
}

.user-mention {
    background-color: #eee;
    border-radius: 3px;
    padding: 0 0.2em;
    border: 1px solid #ccc;
    white-space: nowrap;
    background-image: -moz-linear-gradient(top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 100%);
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.1)), color-stop(100%,rgba(0,0,0,0)));
    background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
    background-image: -o-linear-gradient(top, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
    background-image: -ms-linear-gradient(top, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
    background-image: linear-gradient(to bottom, rgba(0,0,0,0.1) 0%,rgba(0,0,0,0) 100%);
    display: inline-block;
    margin-bottom: 1px;
}

.user-mention-me {
    background-color: #c9fcc1;
}

#settings-change-box .gravatar-profile {
    width: 60px;
    height: 60px;
}

#notification-settings .control-group {
    margin-bottom: 5px;
}

#notification-settings .control-label {
    width: 280px;
    text-align: left;
}

#pin_info_question {
    padding-left: 3px;
}
#pin_info_question:hover {
    cursor:  pointer;
}

.zero_count {
    display: none;
}

.message-pane {
    padding-left: 0.3em;
}

.screen {
    position: absolute;
    left: 0;
    top: 0;
    background: #000;
    z-index: 20000;
}

.tutorial-popover {
    width: 200px;
}

#tutorial-stream {
    width: 250px;
}

#tutorial-subject {
    width: 250px;
}
.tutorial-done-button {
    text-align: right;
}

#onboarding-checklist i {
    margin-right: 0.25em;
}

#share-the-love {
    margin-left: 10px;
    margin-bottom: 5px;
    line-height: 18px;
}

#share-the-love input, #share-the-love p {
    margin-top: 5px;
    margin-bottom: 5px;
}

#share-the-love .icon-vector-heart {
    color: red;
}

#share-the-love .still-have-invites {
}

#share-the-love .no-more-invites {
    display: none;
}

#share-the-love .alert {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

#referral-form {
    margin-bottom: 0;
}

#tell-a-friend-success, #tell-a-friend-error {
    display: none;
}

