Fix word wrapping of "share the love" message
(imported from commit 3f2419fb12c696f1422472f95e2466086276afe8)

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -2252,9 +2252,11 @@ div.edit_bot {
 }
 
 #share-the-love .still-have-invites {
+    clear: both;
 }
 
 #share-the-love .no-more-invites {
+    clear: both;
     display: none;
 }
 
